--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,2 @@
-h11==0.13.0
-idna==3.3
-pydantic==1.9.2
-python-dotenv==0.20.0
-sniffio==1.2.0
-typing_extensions==4.3.0
-requests==2.28.1
-selenium==4.1.0
-webdriver_manager==3.8.4
-urllib3==1.26.8
-packaging==21.3
+selenium
+requests
